Add -XX:+EnableDynamicAgentLoading to java args